[package]
name = "reddit-randomiser"
version = "0.1.0"
authors = ["DankusMemusXXX <14098249+tincaMatei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
http = "0.2.1"
